# blackhandUI

./: CMakeLists.txt  README.md  settings.conf
Notes/: Black Hand.md  Drawing.md  Math.md  test.md
VoiceMemos/: memo_20260307_170755.vmemo  memo_20260307_170759.vmemo  memo_20260307_170800.vmemo  memo_20260307_171456_0.vmemo  memo_20260307_171457_1.vmemo  memo_20260307_171457_2.vmemo  memo_20260307_171458_4.vmemo  memo_20260307_171458_5.vmemo  memo_20260307_171458_6.vmemo  memo_20260307_171458_7.vmemo  memo_20260307_171458_8.vmemo  memo_20260307_172454_0.vmemo
build-warn/: CMakeCache.txt  Makefile  blackhand-ui  cmake_install.cmake
src/: config.h  draw_utils.c  draw_utils.h  frame_renderer.c  frame_renderer.h  hardware.c  hardware.h  main.c  screen_home.c  screen_settings.c  ui.h
src/platform/: hardware.c
src/screens/: screen_calls.c  screen_contacts.c  screen_home.c  screen_messages.c  screen_mp3.c  screen_notes.c  screen_settings.c  screen_voice_memo.c
src/services/: mp3_service.c  mp3_service.h  notes_service.c  notes_service.h  settings_service.c  settings_service.h  theme_service.c  theme_service.h  voice_memo_service.c  voice_memo_service.h
